k8s/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trender-staging-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: staging-internal-alb
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    # alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip   
    ## SSL Settings
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:289889419728:certificate/217bcb25-0e96-4333-a554-5f57951b13e1
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'


spec:
  rules:
  - host: k8s.staging.trendertag.com
  - http:
      paths:
        - path: /nlp/*
          backend:
            serviceName: nlp-service
            servicePort: 8000
        # Redirect traffic to https    
        - path: /*
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
